[gd_scene load_steps=2 format=3 uid="uid://d3e5alurdf5ys"]

[ext_resource type="Script" path="res://material_maker/windows/file_dialog/left_panel.gd" id="1"]

[node name="LeftPanel" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 3
script = ExtResource("1")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecentLabel" type="Label" parent="."]
offset_right = 100.0
offset_bottom = 14.0
text = "Recent"

[node name="RecentList" type="ItemList" parent="."]
offset_top = 18.0
offset_right = 100.0
offset_bottom = 18.0
custom_minimum_size = Vector2(100, 0)
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FavLabel" type="Label" parent="."]
offset_top = 22.0
offset_right = 100.0
offset_bottom = 36.0
text = "Favorite"

[node name="FavList" type="ItemList" parent="."]
offset_top = 40.0
offset_right = 100.0
offset_bottom = 40.0
custom_minimum_size = Vector2(100, 0)
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="RecentList" to="." method="_on_RecentList_gui_input"]
[connection signal="item_activated" from="RecentList" to="." method="_on_RecentList_item_activated"]
[connection signal="gui_input" from="FavList" to="." method="_on_FavList_gui_input"]
[connection signal="item_activated" from="FavList" to="." method="_on_FavList_item_activated"]
